--- a/ResumeBuilder/Pages/Shared/_Layout.cshtml
+++ b/ResumeBuilder/Pages/Shared/_Layout.cshtml
@@ -10,12 +10,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg" style="background-color: #007BFF;">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">ResumeBuilder</a>
-                <form class="container-fluid justify-content-start">
-                    <button type="button" class="btn btn-primary" onClick="PrintBtn()">Print</button>
-                </form>
+        <nav class="navbar navbar-expand-lg title">
+            <div class="container text-center">
+                <span class="navbar-brand mx-auto font-weight-bold" asp-area="" asp-page="/Index">ResumeBuilder</span>
             </div>
         </nav>
     </header>
